tests/parser-test-files/parse-body.txt
================================================================================
Malformed function
================================================================================

(package test-package)

(define x (progn))

--------------------------------------------------------------------------------

error: Malformed function
  --> test:3:17
   |
 3 |  (define x (progn))
   |                  ^ expected body

================================================================================
Malformed expression
================================================================================

(package test-package)

(define x (progn 1 2 . 3))

--------------------------------------------------------------------------------

error: Malformed expression
  --> test:3:10
   |
 3 |  (define x (progn 1 2 . 3))
   |            ^^^^^^^^^^^^^^^ unexpected dotted list

================================================================================
Malformed body expression
================================================================================

(package test-package)

(define x
  (progn
    (let x = 5 . 5)
    x))

--------------------------------------------------------------------------------

error: Malformed body expression
  --> test:5:4
   |
 5 |      (let x = 5 . 5)
   |      ^^^^^^^^^^^^^^^ unexpected dotted list

================================================================================
Malformed body expression
================================================================================

(package test-package)

(define x
  (progn
    (let x = 5)))

--------------------------------------------------------------------------------

error: Malformed body expression
  --> test:5:4
   |
 5 |      (let x = 5)))
   |      ^^^^^^^^^^^ body forms cannot be terminated by a shorthand let

================================================================================
Malformed shorthand let
================================================================================

(package test-package)

(define x
  (progn
    (let x = 1 2)
    x))

--------------------------------------------------------------------------------

error: Malformed shorthand let
  --> test:5:15
   |
 5 |      (let x = 1 2)
   |                 ^ unexpected trailing form
